operators/project-onboarding-operator/0.0.51/manifests/project-onboarding-operator-controller-manager-metrics-service_v1_service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: project-onboarding-operator
    control-plane: controller-manager
  name: project-onboarding-operator-controller-manager-metrics-service
spec:
  ports:
  - name: https
    port: 8443
    protocol: TCP
    targetPort: https
  selector:
    app.kubernetes.io/name: project-onboarding-operator
    control-plane: controller-manager
status:
  loadBalancer: {}
