operators/project-onboarding-operator/0.0.51/manifests/project-onboarding-operator-webhook-service_v1_service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: webhook-server-cert
  creationTimestamp: null
  name: project-onboarding-operator-webhook-service
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 9443
  selector:
    app.kubernetes.io/name: project-onboarding-operator
    control-plane: controller-manager
status:
  loadBalancer: {}
